# longhorn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  longhorn.desktop
.github/workflows/: ci.yml
cmake/: embed_text.cmake
doc/: longhorn.1
include/longhorn/: app.hpp  config_file.hpp  filter.hpp  geometry.hpp  gl_funcs.hpp  gl_text.hpp  glass.hpp  history.hpp  input.hpp  platform.hpp  renderer.hpp
protocols/: wlr-layer-shell-unstable-v1.xml
scripts/: longhorn_path  longhorn_run
shaders/: glass.frag.glsl  glass.vert.glsl
src/: app.cpp  config_file.cpp  filter.cpp  geometry.cpp  gl_funcs.cpp  gl_text.cpp  glass.cpp  history.cpp  input.cpp  main.cpp  platform.cpp  platform_wayland.cpp  platform_x11.cpp  renderer.cpp
tests/: test_config_file.cpp  test_filter.cpp  test_geometry.cpp  test_history.cpp  test_vertical.cpp
